// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`api/queries/getVTokens > returns the vTokens on success 1`] = `
{
  "vTokens": [
    {
      "address": "0x170d3b2da05cc2124334240fB34ad1359e34C562",
      "decimals": 8,
      "symbol": "vHAY",
      "underlyingToken": {
        "address": "0xe73774DfCD551BF75650772dC2cC56a2B6323453",
        "asset": "/src/assets/img/tokens/hay.png",
        "decimals": 18,
        "symbol": "HAY",
      },
    },
    {
      "address": "0x3338988d0beb4419Acb8fE624218754053362D06",
      "decimals": 8,
      "symbol": "vUSDT",
      "underlyingToken": {
        "address": "0xA11c8D9DC9b66E209Ef60F0C8D969D3CD988782c",
        "asset": "/src/assets/img/tokens/usdt.svg",
        "decimals": 6,
        "symbol": "USDT",
      },
    },
    {
      "address": "0x899dDf81DfbbF5889a16D075c352F2b959Dd24A4",
      "decimals": 8,
      "symbol": "vUSDD",
      "underlyingToken": {
        "address": "0x2E2466e22FcbE0732Be385ee2FBb9C59a1098382",
        "asset": "/src/assets/img/tokens/usdd.svg",
        "decimals": 18,
        "symbol": "USDD",
      },
    },
    {
      "address": "0xEF949287834Be010C1A5EDd757c385FB9b644E4A",
      "decimals": 8,
      "symbol": "vBIFI",
      "underlyingToken": {
        "address": "0x5B662703775171c4212F2FBAdb7F92e64116c154",
        "asset": "/src/assets/img/tokens/bifi.png",
        "decimals": 18,
        "symbol": "BIFI",
      },
    },
    {
      "address": "0x5e68913fbbfb91af30366ab1B21324410b49a308",
      "decimals": 8,
      "symbol": "vBSW",
      "underlyingToken": {
        "address": "0x7FCC76fc1F573d8Eb445c236Cc282246bC562bCE",
        "asset": "/src/assets/img/tokens/bsw.svg",
        "decimals": 18,
        "symbol": "BSW",
      },
    },
    {
      "address": "0xb7caC5Ef82cb7f9197ee184779bdc52c5490C02a",
      "decimals": 8,
      "symbol": "vALPACA",
      "underlyingToken": {
        "address": "0x6923189d91fdF62dBAe623a55273F1d20306D9f2",
        "asset": "/src/assets/img/tokens/alpaca.svg",
        "decimals": 18,
        "symbol": "ALPACA",
      },
    },
    {
      "address": "0x80CC30811e362aC9aB857C3d7875CbcCc0b65750",
      "decimals": 8,
      "symbol": "vUSDT",
      "underlyingToken": {
        "address": "0xA11c8D9DC9b66E209Ef60F0C8D969D3CD988782c",
        "asset": "/src/assets/img/tokens/usdt.svg",
        "decimals": 6,
        "symbol": "USDT",
      },
    },
    {
      "address": "0xa109DE0abaeefC521Ec29D89eA42E64F37A6882E",
      "decimals": 8,
      "symbol": "vUSDD",
      "underlyingToken": {
        "address": "0x2E2466e22FcbE0732Be385ee2FBb9C59a1098382",
        "asset": "/src/assets/img/tokens/usdd.svg",
        "decimals": 18,
        "symbol": "USDD",
      },
    },
    {
      "address": "0xb677e080148368EeeE70fA3865d07E92c6500174",
      "decimals": 8,
      "symbol": "vANKR",
      "underlyingToken": {
        "address": "0xe4a90EB942CF2DA7238e8F6cC9EF510c49FC8B4B",
        "asset": "/src/assets/img/tokens/ankr.svg",
        "decimals": 18,
        "symbol": "ANKR",
      },
    },
    {
      "address": "0x1958035231E125830bA5d17D168cEa07Bb42184a",
      "decimals": 8,
      "symbol": "vRACA",
      "underlyingToken": {
        "address": "0xD60cC803d888A3e743F21D0bdE4bF2cAfdEA1F26",
        "asset": "/src/assets/img/tokens/raca.png",
        "decimals": 18,
        "symbol": "RACA",
      },
    },
    {
      "address": "0xef470AbC365F88e4582D8027172a392C473A5B53",
      "decimals": 8,
      "symbol": "vFLOKI",
      "underlyingToken": {
        "address": "0xb22cF15FBc089d470f8e532aeAd2baB76bE87c88",
        "asset": "/src/assets/img/tokens/floki.svg",
        "decimals": 18,
        "symbol": "FLOKI",
      },
    },
    {
      "address": "0x0bFE4e0B8A2a096A27e5B18b078d25be57C08634",
      "decimals": 8,
      "symbol": "vUSDT",
      "underlyingToken": {
        "address": "0xA11c8D9DC9b66E209Ef60F0C8D969D3CD988782c",
        "asset": "/src/assets/img/tokens/usdt.svg",
        "decimals": 6,
        "symbol": "USDT",
      },
    },
    {
      "address": "0xdeDf3B2bcF25d0023115fd71a0F8221C91C92B1a",
      "decimals": 8,
      "symbol": "vUSDD",
      "underlyingToken": {
        "address": "0x2E2466e22FcbE0732Be385ee2FBb9C59a1098382",
        "asset": "/src/assets/img/tokens/usdd.svg",
        "decimals": 18,
        "symbol": "USDD",
      },
    },
    {
      "address": "0x57a664Dd7f1dE19545fEE9c86C949e3BF43d6D47",
      "decimals": 8,
      "symbol": "vankrBNB",
      "underlyingToken": {
        "address": "0x167F1F9EF531b3576201aa3146b13c57dbEda514",
        "asset": "/src/assets/img/tokens/ankrBNB.svg",
        "decimals": 18,
        "symbol": "ankrBNB",
      },
    },
    {
      "address": "0x644A149853E5507AdF3e682218b8AC86cdD62951",
      "decimals": 8,
      "symbol": "vBNBx",
      "underlyingToken": {
        "address": "0x327d6E6FAC0228070884e913263CFF9eFed4a2C8",
        "asset": "/src/assets/img/tokens/bnbx.png",
        "decimals": 18,
        "symbol": "BNBx",
      },
    },
    {
      "address": "0x75aa42c832a8911B77219DbeBABBB40040d16987",
      "decimals": 8,
      "symbol": "vstkBNB",
      "underlyingToken": {
        "address": "0x2999C176eBf66ecda3a646E70CeB5FF4d5fCFb8C",
        "asset": "/src/assets/img/tokens/stkBNB.svg",
        "decimals": 18,
        "symbol": "stkBNB",
      },
    },
    {
      "address": "0x231dED0Dfc99634e52EE1a1329586bc970d773b3",
      "decimals": 8,
      "symbol": "vWBNB",
      "underlyingToken": {
        "address": "0xae13d989daC2f0dEbFf460aC112a837C89BAa7cd",
        "asset": "/src/assets/img/tokens/wbnb.svg",
        "decimals": 18,
        "symbol": "WBNB",
      },
    },
    {
      "address": "0x2197d02cC9cd1ad51317A0a85A656a0c82383A7c",
      "decimals": 8,
      "symbol": "vUSDT",
      "underlyingToken": {
        "address": "0xA11c8D9DC9b66E209Ef60F0C8D969D3CD988782c",
        "asset": "/src/assets/img/tokens/usdt.svg",
        "decimals": 6,
        "symbol": "USDT",
      },
    },
    {
      "address": "0xD5b20708d8f0FcA52cb609938D0594C4e32E5DaD",
      "decimals": 8,
      "symbol": "vUSDD",
      "underlyingToken": {
        "address": "0x2E2466e22FcbE0732Be385ee2FBb9C59a1098382",
        "asset": "/src/assets/img/tokens/usdd.svg",
        "decimals": 18,
        "symbol": "USDD",
      },
    },
    {
      "address": "0x47793540757c6E6D84155B33cd8D9535CFdb9334",
      "decimals": 8,
      "symbol": "vBTT",
      "underlyingToken": {
        "address": "0xE98344A7c691B200EF47c9b8829110087D832C64",
        "asset": "/src/assets/img/tokens/btt.svg",
        "decimals": 18,
        "symbol": "BTT",
      },
    },
    {
      "address": "0xEe543D5de2Dbb5b07675Fc72831A2f1812428393",
      "decimals": 8,
      "symbol": "vWIN",
      "underlyingToken": {
        "address": "0x2E6Af3f3F059F43D764060968658c9F3c8f9479D",
        "asset": "/src/assets/img/tokens/win.svg",
        "decimals": 18,
        "symbol": "WIN",
      },
    },
    {
      "address": "0x410286c43a525E1DCC7468a9B091C111C8324cd1",
      "decimals": 8,
      "symbol": "vTRX",
      "underlyingToken": {
        "address": "0x7D21841DC10BA1C5797951EFc62fADBBDD06704B",
        "asset": "/src/assets/img/tokens/trx.svg",
        "decimals": 6,
        "symbol": "TRX",
      },
    },
    {
      "address": "0x712774CBFFCBD60e9825871CcEFF2F917442b2c3",
      "decimals": 8,
      "symbol": "vUSDT",
      "underlyingToken": {
        "address": "0xA11c8D9DC9b66E209Ef60F0C8D969D3CD988782c",
        "asset": "/src/assets/img/tokens/usdt.svg",
        "decimals": 6,
        "symbol": "USDT",
      },
    },
    {
      "address": "0xD804F74fe21290d213c46610ab171f7c2EeEBDE7",
      "decimals": 8,
      "symbol": "vUSDD",
      "underlyingToken": {
        "address": "0x2E2466e22FcbE0732Be385ee2FBb9C59a1098382",
        "asset": "/src/assets/img/tokens/usdd.svg",
        "decimals": 18,
        "symbol": "USDD",
      },
    },
    {
      "address": "0xD5C4C2e2facBEB59D0216D0595d63FcDc6F9A1a7",
      "decimals": 8,
      "symbol": "vUSDC",
      "underlyingToken": {
        "address": "0x16227D60f7a0e586C66B005219dfc887D13C9531",
        "asset": "/src/assets/img/tokens/usdc.svg",
        "decimals": 6,
        "symbol": "USDC",
      },
    },
    {
      "address": "0xb7526572FFE56AB9D7489838Bf2E18e3323b441A",
      "decimals": 8,
      "symbol": "vUSDT",
      "underlyingToken": {
        "address": "0xA11c8D9DC9b66E209Ef60F0C8D969D3CD988782c",
        "asset": "/src/assets/img/tokens/usdt.svg",
        "decimals": 6,
        "symbol": "USDT",
      },
    },
    {
      "address": "0x08e0A5575De71037aE36AbfAfb516595fE68e5e4",
      "decimals": 8,
      "symbol": "vBUSD",
      "underlyingToken": {
        "address": "0x8301F2213c0eeD49a7E28Ae4c3e91722919B8B47",
        "asset": "/src/assets/img/tokens/busd.svg",
        "decimals": 18,
        "symbol": "BUSD",
      },
    },
    {
      "address": "0x74469281310195A04840Daf6EdF576F559a3dE80",
      "decimals": 8,
      "symbol": "vSXP",
      "underlyingToken": {
        "address": "0x75107940Cf1121232C0559c747A986DEfbc69DA9",
        "asset": "/src/assets/img/tokens/sxp.svg",
        "decimals": 18,
        "symbol": "SXP",
      },
    },
    {
      "address": "0x2E7222e51c0f6e98610A1543Aa3836E092CDe62c",
      "decimals": 8,
      "symbol": "vBNB",
      "underlyingToken": {
        "address": "0x0000000000000000000000000000000000000000",
        "asset": "/src/assets/img/tokens/bnb.svg",
        "decimals": 18,
        "isNative": true,
        "symbol": "BNB",
      },
    },
    {
      "address": "0x6d6F697e34145Bb95c54E77482d97cc261Dc237E",
      "decimals": 8,
      "symbol": "vXVS",
      "underlyingToken": {
        "address": "0xB9e0E753630434d7863528cc73CB7AC638a7c8ff",
        "asset": "/src/assets/img/tokens/xvs.svg",
        "decimals": 18,
        "symbol": "XVS",
      },
    },
    {
      "address": "0x162D005F0Fff510E54958Cfc5CF32A3180A84aab",
      "decimals": 8,
      "symbol": "vETH",
      "underlyingToken": {
        "address": "0x98f7A83361F7Ac8765CcEBAB1425da6b341958a7",
        "asset": "/src/assets/img/tokens/eth.svg",
        "decimals": 18,
        "symbol": "ETH",
      },
    },
    {
      "address": "0xAfc13BC065ABeE838540823431055D2ea52eBA52",
      "decimals": 8,
      "symbol": "vLTC",
      "underlyingToken": {
        "address": "0x969F147B6b8D81f86175de33206A4FD43dF17913",
        "asset": "/src/assets/img/tokens/ltc.svg",
        "decimals": 18,
        "symbol": "LTC",
      },
    },
    {
      "address": "0x488aB2826a154da01CC4CC16A8C83d4720D3cA2C",
      "decimals": 8,
      "symbol": "vXRP",
      "underlyingToken": {
        "address": "0x3022A32fdAdB4f02281E8Fab33e0A6811237aab0",
        "asset": "/src/assets/img/tokens/xrp.svg",
        "decimals": 18,
        "symbol": "XRP",
      },
    },
    {
      "address": "0xb6e9322C49FD75a367Fcb17B0Fcd62C5070EbCBe",
      "decimals": 8,
      "symbol": "vBTCB",
      "underlyingToken": {
        "address": "0xA808e341e8e723DC6BA0Bb5204Bafc2330d7B8e4",
        "asset": "/src/assets/img/tokens/btcb.svg",
        "decimals": 18,
        "symbol": "BTCB",
      },
    },
    {
      "address": "0x37C28DE42bA3d22217995D146FC684B2326Ede64",
      "decimals": 8,
      "symbol": "vADA",
      "underlyingToken": {
        "address": "0xcD34BC54106bd45A04Ed99EBcC2A6a3e70d7210F",
        "asset": "/src/assets/img/tokens/ada.svg",
        "decimals": 18,
        "symbol": "ADA",
      },
    },
    {
      "address": "0xF912d3001CAf6DC4ADD366A62Cc9115B4303c9A9",
      "decimals": 8,
      "symbol": "vDOGE",
      "underlyingToken": {
        "address": "0x67D262CE2b8b846d9B94060BC04DC40a83F0e25B",
        "asset": "/src/assets/img/tokens/doge.svg",
        "decimals": 8,
        "symbol": "DOGE",
      },
    },
    {
      "address": "0xeDaC03D29ff74b5fDc0CC936F6288312e1459BC6",
      "decimals": 8,
      "symbol": "vCAKE",
      "underlyingToken": {
        "address": "0xe8bd7cCC165FAEb9b81569B05424771B9A20cbEF",
        "asset": "/src/assets/img/tokens/cake.svg",
        "decimals": 18,
        "symbol": "CAKE",
      },
    },
    {
      "address": "0x3619bdDc61189F33365CC572DF3a68FB3b316516",
      "decimals": 8,
      "symbol": "vMATIC",
      "underlyingToken": {
        "address": "0xcfeb0103d4BEfa041EA4c2dACce7B3E83E1aE7E3",
        "asset": "/src/assets/img/tokens/matic.svg",
        "decimals": 18,
        "symbol": "MATIC",
      },
    },
    {
      "address": "0x714db6c38A17883964B68a07d56cE331501d9eb6",
      "decimals": 8,
      "symbol": "vAAVE",
      "underlyingToken": {
        "address": "0x4B7268FC7C727B88c5Fc127D41b491BfAe63e144",
        "asset": "/src/assets/img/tokens/aave.svg",
        "decimals": 18,
        "symbol": "AAVE",
      },
    },
    {
      "address": "0x3A00d9B02781f47d033BAd62edc55fBF8D083Fb0",
      "decimals": 8,
      "symbol": "vTUSDOLD",
      "underlyingToken": {
        "address": "0xFeC3A63401Eb9C1476200d7C32c4009Be0154169",
        "asset": "/src/assets/img/tokens/tusd.svg",
        "decimals": 18,
        "symbol": "TUSDOLD",
      },
    },
    {
      "address": "0x369Fea97f6fB7510755DCA389088d9E2e2819278",
      "decimals": 8,
      "symbol": "vTRXOLD",
      "underlyingToken": {
        "address": "0x19E7215abF8B2716EE807c9f4b83Af0e7f92653F",
        "asset": "/src/assets/img/tokens/trx.svg",
        "decimals": 18,
        "symbol": "TRXOLD",
      },
    },
    {
      "address": "0xF206af85BC2761c4F876d27Bd474681CfB335EfA",
      "decimals": 8,
      "symbol": "vUST",
      "underlyingToken": {
        "address": "0x5A79efD958432E72211ee73D5DDFa9bc8f248b5F",
        "asset": "/src/assets/img/tokens/ust.svg",
        "decimals": 18,
        "symbol": "UST",
      },
    },
    {
      "address": "0x9C3015191d39cF1930F92EB7e7BCbd020bCA286a",
      "decimals": 8,
      "symbol": "vLUNA",
      "underlyingToken": {
        "address": "0xf36160EC62E3B191EA375dadfe465E8Fa1F8CabB",
        "asset": "/src/assets/img/tokens/luna.svg",
        "decimals": 6,
        "symbol": "LUNA",
      },
    },
    {
      "address": "0x6AF3Fdb3282c5bb6926269Db10837fa8Aec67C04",
      "decimals": 8,
      "symbol": "vTRX",
      "underlyingToken": {
        "address": "0x7D21841DC10BA1C5797951EFc62fADBBDD06704B",
        "asset": "/src/assets/img/tokens/trx.svg",
        "decimals": 6,
        "symbol": "TRX",
      },
    },
    {
      "address": "0x35566ED3AF9E537Be487C98b1811cDf95ad0C32b",
      "decimals": 8,
      "symbol": "vWBETH",
      "underlyingToken": {
        "address": "0xf9F98365566F4D55234f24b99caA1AfBE6428D44",
        "asset": "/src/assets/img/tokens/wbeth.svg",
        "decimals": 18,
        "symbol": "WBETH",
      },
    },
    {
      "address": "0xEFAACF73CE2D38ED40991f29E72B12C74bd4cf23",
      "decimals": 8,
      "symbol": "vTUSD",
      "underlyingToken": {
        "address": "0xB32171ecD878607FFc4F8FC0bCcE6852BB3149E0",
        "asset": "/src/assets/img/tokens/tusd.svg",
        "decimals": 18,
        "symbol": "TUSD",
      },
    },
  ],
}
`;

exports[`api/queries/getVTokens > still functions without passing venusLensContract or mainPoolComptrollerContract 1`] = `
{
  "vTokens": [
    {
      "address": "0x170d3b2da05cc2124334240fB34ad1359e34C562",
      "decimals": 8,
      "symbol": "vHAY",
      "underlyingToken": {
        "address": "0xe73774DfCD551BF75650772dC2cC56a2B6323453",
        "asset": "/src/assets/img/tokens/hay.png",
        "decimals": 18,
        "symbol": "HAY",
      },
    },
    {
      "address": "0x3338988d0beb4419Acb8fE624218754053362D06",
      "decimals": 8,
      "symbol": "vUSDT",
      "underlyingToken": {
        "address": "0xA11c8D9DC9b66E209Ef60F0C8D969D3CD988782c",
        "asset": "/src/assets/img/tokens/usdt.svg",
        "decimals": 6,
        "symbol": "USDT",
      },
    },
    {
      "address": "0x899dDf81DfbbF5889a16D075c352F2b959Dd24A4",
      "decimals": 8,
      "symbol": "vUSDD",
      "underlyingToken": {
        "address": "0x2E2466e22FcbE0732Be385ee2FBb9C59a1098382",
        "asset": "/src/assets/img/tokens/usdd.svg",
        "decimals": 18,
        "symbol": "USDD",
      },
    },
    {
      "address": "0xEF949287834Be010C1A5EDd757c385FB9b644E4A",
      "decimals": 8,
      "symbol": "vBIFI",
      "underlyingToken": {
        "address": "0x5B662703775171c4212F2FBAdb7F92e64116c154",
        "asset": "/src/assets/img/tokens/bifi.png",
        "decimals": 18,
        "symbol": "BIFI",
      },
    },
    {
      "address": "0x5e68913fbbfb91af30366ab1B21324410b49a308",
      "decimals": 8,
      "symbol": "vBSW",
      "underlyingToken": {
        "address": "0x7FCC76fc1F573d8Eb445c236Cc282246bC562bCE",
        "asset": "/src/assets/img/tokens/bsw.svg",
        "decimals": 18,
        "symbol": "BSW",
      },
    },
    {
      "address": "0xb7caC5Ef82cb7f9197ee184779bdc52c5490C02a",
      "decimals": 8,
      "symbol": "vALPACA",
      "underlyingToken": {
        "address": "0x6923189d91fdF62dBAe623a55273F1d20306D9f2",
        "asset": "/src/assets/img/tokens/alpaca.svg",
        "decimals": 18,
        "symbol": "ALPACA",
      },
    },
    {
      "address": "0x80CC30811e362aC9aB857C3d7875CbcCc0b65750",
      "decimals": 8,
      "symbol": "vUSDT",
      "underlyingToken": {
        "address": "0xA11c8D9DC9b66E209Ef60F0C8D969D3CD988782c",
        "asset": "/src/assets/img/tokens/usdt.svg",
        "decimals": 6,
        "symbol": "USDT",
      },
    },
    {
      "address": "0xa109DE0abaeefC521Ec29D89eA42E64F37A6882E",
      "decimals": 8,
      "symbol": "vUSDD",
      "underlyingToken": {
        "address": "0x2E2466e22FcbE0732Be385ee2FBb9C59a1098382",
        "asset": "/src/assets/img/tokens/usdd.svg",
        "decimals": 18,
        "symbol": "USDD",
      },
    },
    {
      "address": "0xb677e080148368EeeE70fA3865d07E92c6500174",
      "decimals": 8,
      "symbol": "vANKR",
      "underlyingToken": {
        "address": "0xe4a90EB942CF2DA7238e8F6cC9EF510c49FC8B4B",
        "asset": "/src/assets/img/tokens/ankr.svg",
        "decimals": 18,
        "symbol": "ANKR",
      },
    },
    {
      "address": "0x1958035231E125830bA5d17D168cEa07Bb42184a",
      "decimals": 8,
      "symbol": "vRACA",
      "underlyingToken": {
        "address": "0xD60cC803d888A3e743F21D0bdE4bF2cAfdEA1F26",
        "asset": "/src/assets/img/tokens/raca.png",
        "decimals": 18,
        "symbol": "RACA",
      },
    },
    {
      "address": "0xef470AbC365F88e4582D8027172a392C473A5B53",
      "decimals": 8,
      "symbol": "vFLOKI",
      "underlyingToken": {
        "address": "0xb22cF15FBc089d470f8e532aeAd2baB76bE87c88",
        "asset": "/src/assets/img/tokens/floki.svg",
        "decimals": 18,
        "symbol": "FLOKI",
      },
    },
    {
      "address": "0x0bFE4e0B8A2a096A27e5B18b078d25be57C08634",
      "decimals": 8,
      "symbol": "vUSDT",
      "underlyingToken": {
        "address": "0xA11c8D9DC9b66E209Ef60F0C8D969D3CD988782c",
        "asset": "/src/assets/img/tokens/usdt.svg",
        "decimals": 6,
        "symbol": "USDT",
      },
    },
    {
      "address": "0xdeDf3B2bcF25d0023115fd71a0F8221C91C92B1a",
      "decimals": 8,
      "symbol": "vUSDD",
      "underlyingToken": {
        "address": "0x2E2466e22FcbE0732Be385ee2FBb9C59a1098382",
        "asset": "/src/assets/img/tokens/usdd.svg",
        "decimals": 18,
        "symbol": "USDD",
      },
    },
    {
      "address": "0x57a664Dd7f1dE19545fEE9c86C949e3BF43d6D47",
      "decimals": 8,
      "symbol": "vankrBNB",
      "underlyingToken": {
        "address": "0x167F1F9EF531b3576201aa3146b13c57dbEda514",
        "asset": "/src/assets/img/tokens/ankrBNB.svg",
        "decimals": 18,
        "symbol": "ankrBNB",
      },
    },
    {
      "address": "0x644A149853E5507AdF3e682218b8AC86cdD62951",
      "decimals": 8,
      "symbol": "vBNBx",
      "underlyingToken": {
        "address": "0x327d6E6FAC0228070884e913263CFF9eFed4a2C8",
        "asset": "/src/assets/img/tokens/bnbx.png",
        "decimals": 18,
        "symbol": "BNBx",
      },
    },
    {
      "address": "0x75aa42c832a8911B77219DbeBABBB40040d16987",
      "decimals": 8,
      "symbol": "vstkBNB",
      "underlyingToken": {
        "address": "0x2999C176eBf66ecda3a646E70CeB5FF4d5fCFb8C",
        "asset": "/src/assets/img/tokens/stkBNB.svg",
        "decimals": 18,
        "symbol": "stkBNB",
      },
    },
    {
      "address": "0x231dED0Dfc99634e52EE1a1329586bc970d773b3",
      "decimals": 8,
      "symbol": "vWBNB",
      "underlyingToken": {
        "address": "0xae13d989daC2f0dEbFf460aC112a837C89BAa7cd",
        "asset": "/src/assets/img/tokens/wbnb.svg",
        "decimals": 18,
        "symbol": "WBNB",
      },
    },
    {
      "address": "0x2197d02cC9cd1ad51317A0a85A656a0c82383A7c",
      "decimals": 8,
      "symbol": "vUSDT",
      "underlyingToken": {
        "address": "0xA11c8D9DC9b66E209Ef60F0C8D969D3CD988782c",
        "asset": "/src/assets/img/tokens/usdt.svg",
        "decimals": 6,
        "symbol": "USDT",
      },
    },
    {
      "address": "0xD5b20708d8f0FcA52cb609938D0594C4e32E5DaD",
      "decimals": 8,
      "symbol": "vUSDD",
      "underlyingToken": {
        "address": "0x2E2466e22FcbE0732Be385ee2FBb9C59a1098382",
        "asset": "/src/assets/img/tokens/usdd.svg",
        "decimals": 18,
        "symbol": "USDD",
      },
    },
    {
      "address": "0x47793540757c6E6D84155B33cd8D9535CFdb9334",
      "decimals": 8,
      "symbol": "vBTT",
      "underlyingToken": {
        "address": "0xE98344A7c691B200EF47c9b8829110087D832C64",
        "asset": "/src/assets/img/tokens/btt.svg",
        "decimals": 18,
        "symbol": "BTT",
      },
    },
    {
      "address": "0xEe543D5de2Dbb5b07675Fc72831A2f1812428393",
      "decimals": 8,
      "symbol": "vWIN",
      "underlyingToken": {
        "address": "0x2E6Af3f3F059F43D764060968658c9F3c8f9479D",
        "asset": "/src/assets/img/tokens/win.svg",
        "decimals": 18,
        "symbol": "WIN",
      },
    },
    {
      "address": "0x410286c43a525E1DCC7468a9B091C111C8324cd1",
      "decimals": 8,
      "symbol": "vTRX",
      "underlyingToken": {
        "address": "0x7D21841DC10BA1C5797951EFc62fADBBDD06704B",
        "asset": "/src/assets/img/tokens/trx.svg",
        "decimals": 6,
        "symbol": "TRX",
      },
    },
    {
      "address": "0x712774CBFFCBD60e9825871CcEFF2F917442b2c3",
      "decimals": 8,
      "symbol": "vUSDT",
      "underlyingToken": {
        "address": "0xA11c8D9DC9b66E209Ef60F0C8D969D3CD988782c",
        "asset": "/src/assets/img/tokens/usdt.svg",
        "decimals": 6,
        "symbol": "USDT",
      },
    },
    {
      "address": "0xD804F74fe21290d213c46610ab171f7c2EeEBDE7",
      "decimals": 8,
      "symbol": "vUSDD",
      "underlyingToken": {
        "address": "0x2E2466e22FcbE0732Be385ee2FBb9C59a1098382",
        "asset": "/src/assets/img/tokens/usdd.svg",
        "decimals": 18,
        "symbol": "USDD",
      },
    },
  ],
}
`;
